<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".feature.register.RegisterActivity">

  <androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">

      <ImageView
        android:id="@+id/image_view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/grid_2x"/>

      <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_username"
        android:layout_width="@dimen/standard_width"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_view"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/grid_2x">

        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/et_username"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="text"
          android:hint="@string/activity_register_hint_username"/>

      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        android:layout_width="@dimen/standard_width"
        android:layout_height="wrap_content"
        android:layout_below="@+id/til_username"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/grid_2x">

        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/et_email"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textEmailAddress"
          android:hint="@string/activity_register_hint_email"/>

      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="@dimen/standard_width"
        android:layout_height="wrap_content"
        android:layout_below="@+id/til_email"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/grid_2x">

        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/et_password"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textPassword"
          android:hint="@string/activity_register_hint_password"/>

      </com.google.android.material.textfield.TextInputLayout>

      <Button
        android:id="@+id/btn_signup"
        android:layout_width="@dimen/standard_width"
        android:layout_height="@dimen/standard_height"
        android:layout_below="@+id/til_password"
        android:layout_centerHorizontal="true"
        style="@style/standardButton"
        android:text="@string/activity_register_button_signup"
        android:layout_margin="@dimen/grid_2x"/>

      <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_signup"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/grid_2x"
        android:clickable="true"
        android:focusable="true"
        style="@style/linkText"
        android:text="@string/activity_register_text_login"/>

    </RelativeLayout>

  </androidx.core.widget.NestedScrollView>

  <LinearLayout
    android:id="@+id/register_progress_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/white"
    android:visibility="gone">

    <ProgressBar
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:indeterminate="true"
      android:indeterminateTintMode="src_atop"
      android:indeterminateTint="@color/lightGrey"/>

  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>